--- a/.github/workflows/compile-release-rk35xx-kernel-6.x.yml
+++ b/.github/workflows/compile-release-rk35xx-kernel-6.x.yml
@@ -28,7 +28,7 @@ on:
         type: choice
         options:
           - 6.1.43
-          - 6.1.161
+          - 6.1.141
       kernel_auto:
         description: "Auto use the latest kernel"
         required: false
@@ -98,7 +98,7 @@ jobs:
           echo "status=success" >> ${GITHUB_OUTPUT}
 
       - name: Compile the kernel [ ${{ inputs.kernel_version }} ]
-        uses: Lyric-c/amlogic-s9xxx-armbian@main
+        uses: unifreq/linux-6.1.y-rockchip@main
         if: ${{ steps.init.outputs.status == 'success' && !cancelled() }}
         with:
           build_target: kernel
