--- a/.github/workflows/compile-release-rk35xx-kernel-6.x.yml
+++ b/.github/workflows/compile-release-rk35xx-kernel-6.x.yml
@@ -21,6 +21,7 @@ on:
           - hellotheasia/kernel-rockchip@nanopi6-v6.1.y
           - hellotheasia/linux-orangepi@orange-pi-6.1-rk35xx
           - Lyric-c/kernel
+          - unifreq/linux-6.1.y-rockchip
       kernel_version:
         description: "Select kernel version"
         required: false
