--- a/.github/workflows/compile-release-rk35xx-kernel-6.x.yml
+++ b/.github/workflows/compile-release-rk35xx-kernel-6.x.yml
@@ -67,7 +67,8 @@ on:
         options:
           - kernel-config/release/rk35xx
           - false
-
+permissions:
+  contents: write
 env:
   TZ: America/New_York
 
@@ -118,7 +119,7 @@ jobs:
           tag: kernel_rk35xx
           artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
           allowUpdates: true
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           body: |
             - The kernel can be used to compile Armbian and OpenWrt.
             - The kernel source code comes from: orangepi-xunlong/linux-orangepi friendlyarm/kernel-rockchip
